--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQL": "Server=.;Initial Catalog=YojaDrinkDB;Persist Security Info=False;TrustServerCertificate=true; Integrated Security=true;"
+    "MSSQL": "Server=.;Initial Catalog=FactuSystemDB;Persist Security Info=False;TrustServerCertificate=true; Integrated Security=true;"
   }
 }
