--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MSSQL": "Server=.;Initial Catalog=CasaIrysDB;Persist Security Info=False;TrustServerCertificate=true; Integrated Security=true;"
-  }
+  "AllowedHosts": "*"
 }
